2004-09-02  Pavel S. Shirshov <pavelsh@mail.ru>

	* editcmd.c (edit_save_as_cmd): Add hotkey to dialog.
	(edit_save_confirm_cmd): Likewise. (edit_new_cmd): Likewise.
	(edit_load_cmd): Likewise. (edit_block_move_cmd): Likewise.
	(edit_block_delete): Likewise. (edit_ok_to_exit): Likewise.

2004-09-01  Pavel S. Shirshov <pavelsh@mail.ru>

	* syntax.c (this_try_alloc_color_pair): Use g_strlcpy instead 
	sequence strncpy(), name[len] = '\0'
	(edit_read_syntax_rules): Likewise.

2004-08-29  Roland Illig  <roland.illig@gmx.de>

	* Code cleanup: Added const qualifier for variables and
	function declarations where possible. No functional changes.

2004-08-26  Leonard den Ottolander  <leonard * den ottolander nl>

        * edit/editcmd.c: Fix buffer overflows in edit replace code.

        Based on patch from Jakub Jelinek  <jakub@redhat.com>

2004-08-23  Jakub Jelinek  <jakub@redhat.com>

	* syntax.c: (edit_read_syntax_rules): Fix boundary conditions.

2004-08-23  David Sterba  <dave@jikos.cz>

	* syntax.c: (edit_read_syntax_rules): Dynamically allocate
	more space for contexts and for words in context. 

2004-08-16  Roland Illig  <roland.illig@gmx.de>

	* edit.c (several functions): Changed the data type of some
	variables from int to size_t (for string lengths) or unsigned
	long (for editor offsets) to avoid implicit sign conversions.
	No functional changes.

	* edit.c, editcmds.h: Moved the semicolon out of the macro
	definition SHELL_COMMANDS_i, so that the declaration in edit.c
	looks more natural. No functional changes.

	* editcmd.c: Added missing initializers for QuickDialogs.i18n.
	Replaced the last item in QuickWidgets from {0} to
	NULL_QuickWidget (that is, added missing initializers).
	(edit_completion_dialog): Made dlg_h and dlg_w unsigned to
	avoid implicit sign conversion. No functional changes.
	
	* editlock.c (lock_build_name, edit_lock_file): Casted pid to
	int to avoid wrong type argument for printf. No other functional
	changes.
